--- a/upload/css/style.css
+++ b/upload/css/style.css
@@ -2,6 +2,7 @@
   position: fixed;
   background-color: black;
   border-radius: 4px;
-  padding: 5px;
+  padding: 10px;
   color: white;
+  max-width: 400px;
 }
