--- a/upload/css/style.css
+++ b/upload/css/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Open Sans', sans-serif;
+}
+
 .tooltip {
   position: fixed;
   background-color: whitesmoke;
@@ -7,6 +11,43 @@
   max-width: 400px;
 }
 
-circle.hidden {
+.hidden {
 	display: none;
+}
+
+#entity-type-select, #section-select {
+	max-height: 200px;
+	overflow-y: scroll;
+}
+
+
+
+.check-button {
+  margin:4px;
+  background-color:#EFEFEF;
+  border-radius:4px;
+  border:1px solid #D0D0D0;
+  overflow:auto;
+  float:left;
+  display: inline-block;
+} 
+
+.check-button label {
+ float:left;
+}
+
+.check-button label span {
+  text-align:center;
+  padding:3px 6px;
+  display:block;
+}
+
+.check-button label input {
+  position:absolute;
+  top:-20px;
+}
+
+.check-button input:checked + span {
+  background-color:#911;
+  color:#fff;
 }
