--- a/upload/css/style.css
+++ b/upload/css/style.css
@@ -2,8 +2,25 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
+#grid {
+  width: 1145px;
+  height: 754px;
+  position: absolute;
+  /*background-image: url("http://cp91279.biography.com/BIO_Bio-Shorts_0_Miles-Davis_150550_SF_HD_768x432-16x9.jpg");
+  background-position: -7px -9px;
+  background-size: 1145px 754px;*/
+}
+
+.grid-item {
+  position: absolute;
+  display: inline-block;
+  cursor: default;
+  overflow: hidden;
+  /*background-image: url("http://cp91279.biography.com/BIO_Bio-Shorts_0_Miles-Davis_150550_SF_HD_768x432-16x9.jpg");*/
+}
+
 .tooltip {
-  position: fixed;
+  position: absolute;
   background-color: whitesmoke;
   border-radius: 4px;
   box-shadow: 1px 1px 10px lightgrey;
