--- a/upload/css/style.css
+++ b/upload/css/style.css
@@ -377,3 +377,9 @@ canvas {-webkit-transform: translate3d(0, 0, 0);-moz-transform: translate3d(0, 0
 	vertical-align: middle
 }
 
+.intro-voroni-picture {
+	position: absolute;
+	top:0px;
+	left:0px
+	
+}
